examples/15.istio-on-gke/cloudsql/egress_to_google.yaml
---
# Cloud SQL Proxy makes requests to `oauth2.googleapis.com`
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: oauth2.googleapis.com
  namespace: istio-workload
spec:
  hosts:
    - oauth2.googleapis.com
  ports:
    - name: https
      number: 443
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL

---
# Cloud SQL Proxy makes requests to `www.googleapis.com`
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www.googleapis.com
  namespace: istio-workload
spec:
  hosts:
    - www.googleapis.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
