examples/15.istio-on-gke/cloudsql/standalone.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cloudsql-proxy
  namespace: istio-workload
  labels:
    app: cloudsql-proxy
    version: v1
spec:
  containers:
    # [START proxy_container]
    - name: cloudsql-proxy
      image: gcr.io/cloudsql-docker/gce-proxy:latest
      command:
        [
          "/cloud_sql_proxy",
          "--dir=/cloudsql",
          "-instances=nmiu-play:us-central1:sinatra1=tcp:0.0.0.0:3306",
          "-credential_file=/secrets/cloudsql/cloudsqlclient.json",
        ]
      volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
        - name: cloudsql
          mountPath: /cloudsql
    # [END proxy_container]
  # [START volumes]
  volumes:
    - name: cloudsql-instance-credentials
      secret:
        secretName: cloudsql-instance-credentials
    - name: cloudsql
      emptyDir:
  # [END volumes]

---
kind: Service
apiVersion: v1
metadata:
  name: cloudsql-proxy
  namespace: istio-workload
spec:
  selector:
    app: cloudsql-proxy
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306

# ---
# apiVersion: authentication.istio.io/v1alpha1
# kind: Policy
# metadata:
#   name: cloudsql-proxy-policy
# spec:
#   targets:
#     - name: cloudsql-proxy

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cloudsql-proxy
  namespace: istio-workload
spec:
  host: cloudsql-proxy
  trafficPolicy:
    tls:
      mode: DISABLE

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: dr-cloudsql-proxy-pod
#   namespace: istio-workload
# spec:
#   host: 10.44.2.145
#   trafficPolicy:
#     tls:
#       mode: DISABLE

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudsql-proxy
  namespace: istio-workload
spec:
  gateways:
    - mesh
  hosts:
    - cloudsql-proxy
  tcp:
    - match:
        - port: 3306
      route:
        - destination:
            host: cloudsql-proxy
            port:
              number: 3306

---
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
  namespace: istio-workload
spec:
  containers:
    - image: gcr.io/nmiu-play/toolbox
      imagePullPolicy: Always
      name: toolbox
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
